1 - Added Splash Screen 2 - Added Heroes List Data 3 - Added The Navigation

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.ComposeLoginPage" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.ComposeLoginPage" parent="android:Theme.Material.Light.NoActionBar">
+        <!-- Set background color for the launch window -->
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
+
 </resources>
